# rust4fun

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  MODULE.md  Makefile.toml  README.md  Shuttle.toml  Trunk.toml  package-lock.json  package.json  tailwind.config.js  test.html
.github/: release.yml
.github/ISSUE_TEMPLATE/: anything.md  kaizen_request.md
.github/workflows/: deploy-shuttle.yml  machete.yml  rust.yml
.sqlx/: query-2826f11718550679351f18305074356ad39a84f9fcb96a2c049def7ca27c0f5c.json  query-36e636d2b3e26b549a3dca472f27730a9193d192dc3e6f8f163092bb5670adc9.json  query-36e8b15669b7a8fec720c0807b9c574ff0b2363898de7a8bfcb91b0c0dfbf93c.json  query-3b7e113eb8b7854623cda0a65cbb27fde35df57d1be0bd306b83a669de4e2dad.json  query-52bc6e6c282c57b5972b1c4a56ec8d2b068fa7cc7535e000cd8186cfc818523e.json  query-8852371a16798a7519ef7f71ee745f801c4bd626389bc8c9d04cfc2b493fffb7.json  query-8924b669ff928465979eb27082c1b1ef0e6f86c78023828207d08f324b3195d7.json  query-8de52b2d6ff754a4076f161513d5600ac792bf8f83a1caafec9f345f01f190ca.json  query-8e1fadf54a8391dcc790393fc9eef61c93a13747e3761477ac44ccecad9330cb.json  query-8f8fc3234928f3d6eff96a0050643c7b306bd3250ef7364564bb8374ca024fe2.json  query-9ae9c93b4a4e59c81d62a755f04cae016fc1a2f92e238d1497b494bab6431ed1.json  query-a6022f5be42cc0a05c44e6b41c93c2d24b986fcbec0480b77012f01e7b4b8b0e.json  query-c2df490d0e52639f63211435701b1ddebd62a235c3eaa8130aa80cd0ca5aee55.json  query-d6a87a5a52c459bd7aefffde6a5ac2afc70cad30ea2dab6c62a013b9f06fe20d.json  query-e72f3a5172e3d3db60d9144267a6f3e76bb9c31cec5ef542bbbea3a3e5740f79.json  query-ea01de0963da4a4d93b084105d2ebf5002a68888e19e619c7ba5f7ae4ed0c833.json  query-ebedd482a3d454c28e4ef0ab23f42cc0ec75817dd46541f9691b29d642357f0d.json
crates/client/: Cargo.toml  README.md
crates/client/src/: auth_codegen.rs  codegen.rs  lib.rs  root_codegen.rs
crates/front/: Cargo.toml  README.md  index.html
crates/front/src/: api.rs  app.rs  auth.rs  component.rs  main.rs  pages.rs  provider.rs  router.rs  server.rs  store.rs  ws.rs
crates/front/src/auth/: client.rs  error.rs
crates/front/src/component/: auth.rs  chat.rs  common.rs  dashboard.rs  initial.rs  login.rs  signup.rs  sphere.rs
crates/front/src/component/auth/: guard.rs
crates/front/src/component/common/: auth_form.rs  footer.rs  input_field.rs  loading.rs  navbar.rs  toast.rs
crates/front/src/component/login/: form.rs  section.rs
crates/front/src/component/signup/: form.rs  section.rs
crates/front/src/component/sphere/: platnet_item.rs  side_bar.rs  sphere_title_item.rs
crates/front/src/pages/: chat.rs  dashboard.rs  index.rs  login.rs  logout.rs  not_found.rs  signup.rs  sphere.rs  unauthorized.rs
crates/front/src/provider/: auth.rs
crates/front/src/server/: auth.rs  ws.rs
crates/front/src/server/api/: client.rs  error.rs
crates/front/src/server/auth/: client.rs  error.rs
crates/front/src/store/: auth.rs  chat.rs  global.rs  local.rs
crates/front/src/structs/: user.rs
crates/server/auth/: Cargo.toml
crates/server/auth/src/: error.rs  lib.rs
crates/server/db-connector/: Cargo.toml  README.md
crates/server/db-connector/migrations/: 20240119084207_add-update-function.down.sql  20240119084207_add-update-function.up.sql  20240119084208_add-users.up.sql  20240120023040_add-articles.down.sql  20240120023040_add-articles.up.sql  20240127180915_add-pgcrypto.down.sql  20240127180915_add-pgcrypto.up.sql  20240206172424_chats.down.sql  20240206172424_chats.up.sql  20240206172424_spheres.down.sql  20240206172424_spheres.up.sql
crates/server/db-connector/src/: error.rs  lib.rs  repository.rs  types.rs
crates/server/db-connector/src/repository/: articles.rs  chat_members.rs  chat_messages.rs  chat_rooms.rs  planet_members.rs  planets.rs  spheres.rs  users.rs
crates/server/db-connector/src/types/: id.rs
crates/server/server/: Cargo.toml  README.md
crates/server/server/src/: error.rs  lib.rs  main.rs  middleware.rs  model.rs  query.rs  request_body.rs  response.rs  router.rs  ws.rs
crates/server/server/src/middleware/: authorization.rs
crates/server/server/src/model/: auth_user.rs  user.rs
crates/server/server/src/request_body/: chats.rs  planets.rs
crates/server/server/src/router/: api.rs  articles.rs  auth.rs  hello.rs  static_file.rs
crates/server/server/src/router/api/: articles.rs  chats.rs  planets.rs  root.rs
crates/server/server/src/router/api/chats/: create_chat_room.rs  create_message.rs  delete_chat_rooms.rs  list_messages.rs
crates/server/server/src/router/api/planets/: create_message.rs  create_planet.rs  list_messages.rs
crates/server/server/src/router/api/root/: me.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: lib.rs  structs.rs  types.rs
crates/shared/src/structs/: planet.rs  user.rs
crates/shared/src/types/: id.rs  kind.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: cli.rs  main.rs
crates/tools/src/cli/: api.rs  generate_client.rs  generate_specs.rs
doc/specifications/: api_v1.yml  auth.yml  root.yml
