[workspace]
members = [
    "crates/client",
    "crates/front",
    "crates/server/auth",
    "crates/server/db-connector",
    "crates/server/server",
    "crates/shared",
    "crates/tools"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [ "rust4fun" ]
description = "Rust study web application"
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
# client

# front
wasm-bindgen-futures = "0.4.40"
wasm-bindgen = "0.2"
yew = "0.21.0"
yew-bootstrap = "0.10.0"
log = "0.4.6"
wasm-logger = "0.2.0"

# server
axum = "0.7.3"
jsonwebtoken = "9.2.0"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-shared-db = { version = "0.36.0", default-features = false, features = [ "postgres" ] }
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = [ "trace", "fs" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false }
sqlx = { version = "0.7.3", default-features = false }
utoipa = "4.2.0"
webpage = "2.0.0"

# tools
futures = "0.3.30"
progenitor = "0.5.0"
prettyplease = "0.2.16"
serde_yaml = "0.9"
syn = "2.0"
clap = "4.4"
anyhow = "1.0"

# common
chrono = "0.4.31"
reqwest = "0.11.23"
derive-new = "0.6.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6.1", features = [ "v4" ] }
