[workspace]
members = [
    "crates/client",
    "crates/front",
    "crates/server/auth",
    "crates/server/db-connector",
    "crates/server/server",
    "crates/shared",
    "crates/tools"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [ "rust4fun" ]
description = "Rust study web application"
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
# client

# front
gloo = "0.11.0"
wasm-bindgen-futures = "0.4.40"
wasm-bindgen = "0.2"
web-sys = "0.3.68"
yew = "0.21.0"
yew-router = "0.18.0"
yewdux = "0.10.0"
log = "0.4"
wasm-logger = "0.2"

# server
axum = "0.7.3"
axum-extra = "0.9.2"
jsonwebtoken = "9.2"
shuttle-axum = "0.39"
shuttle-runtime = "0.39"
shuttle-shared-db = { version = "0.39.0", default-features = false, features = [ "postgres", "sqlx" ] }
shuttle-secrets = "0.39.0"
tokio = "1.28"
tower-http = { version = "0.5", features = [ "trace", "fs" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
sqlx = { version = "0.7.3", default-features = false }
utoipa = "4.2"
webpage = "2.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# tools
futures = "0.3"
progenitor = "0.5"
prettyplease = "0.2"
serde_yaml = "0.9"
syn = "2.0"
clap = "4.4"
anyhow = "1.0"

# common
chrono = "0.4"
derive-new = "0.6"
garde = "0.18"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = [ "v4" ] }
