[package]
name = "rust-study-client"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true }
progenitor = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = [ "v4", "serde" ] }

[lib]
doctest = false
