[package]
name = "rust-study-front"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
web-sys = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = [ "json" ] }
wasm-bindgen-futures =  { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true, features = ["csr"] }
yew-bootstrap = { workspace = true }

rust-study-shared = { path = "../shared" }
rust-study-client = { path = "../client" }
