[package]
name = "rust-study-front"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true, features = [ "serde" ] }
gloo = { workspace = true }
garde = { workspace = true, features = [ "derive", "email" ] }
web-sys = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = [ "json" ] }
thiserror = { workspace = true }
wasm-bindgen-futures =  { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
yewdux =  { workspace = true, features = ['doctests'] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

rust-study-client = { path = "../client" }
