[package]
name = "rust-study-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow= { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
prettyplease = { workspace = true }
progenitor = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = [ "v4", "serde" ] }
utoipa = { workspace = true, features = [ "yaml", "uuid", "debug" ] }

rust-study-client = { path = "../client" }
rust-study-server = { path = "../server/server", features = [ "openapi" ]}
