[package]
name = "rust-study-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow= { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
prettyplease = { workspace = true }
progenitor = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }
tokio = { workspace = true, features = ["full"] }
