[package]
name = "rust-study-server"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow ={ workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = [ "typed-header" ]}
chrono = { workspace = true, features = [ "serde" ] }
shuttle-axum = { workspace = true }
shuttle-runtime = { workspace = true }
shuttle-shared-db = { workspace = true }
shuttle-secrets = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [ "runtime-tokio", "postgres" ] }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = [ "trace", "fs", "cors" ] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false }
uuid = { workspace = true, features = [ "v4" ] }
utoipa = { workspace = true, features = [ "yaml", "uuid" ] }
webpage = { workspace = true }

rust-study-auth = { path = "../auth" }
rust-study-shared = { path = "../../shared" }
rust-study-db-connector = { path = "../db-connector" }

[features]
default = []
openapi = []
